Fix hamburger icon looking off center when in mobile mode

--- a/style.css
+++ b/style.css
@@ -2,6 +2,35 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
+
+:root {
+  --fs-900: 3rem;
+  --fs-800: 2.5rem;
+  --fs-700: 2rem;
+  --fs-400: 1rem;
+
+  --fw-400: 400;
+  --fw-700: 700;
+
+  --size-400: 1.5rem;
+  --size-500: 3rem;
+  --size-600: 6rem;
+
+  --clr-neutral-900: hsl(0, 9%, 11%);
+  --clr-neutral-200: hsl(36, 24%, 96%);
+  --clr-neutral-100: hsl(0, 0%, 100%);
+
+  /* --clr-primary-200: hsl(213, 43%, 79%); */
+  --clr-primary-200: #fff;
+  /* --clr-primary-300: hsl(190, 84%, 50%); */
+  /* --clr-primary-300: #00e1ff; */
+  --clr-primary-300: #775d9c;
+  /* --clr-primary-400: #0062ff; */
+  --clr-primary-400: #ff6c03;
+  --clr-primary-600: #333333;
+  --clr-primary-500: hsl(190, 100%, 28%);
+
+}
 html {
   scroll-behavior: smooth;
   scroll-padding: var(--scroll-padding, 5rem);
@@ -344,33 +373,6 @@ nav .resume img {
   animation: animateStars linear infinite;
 }
 
-:root {
-  --fs-900: 3rem;
-  --fs-800: 2.5rem;
-  --fs-700: 2rem;
-  --fs-400: 1rem;
-
-  --fw-400: 400;
-  --fw-700: 700;
-
-  --size-400: 1.5rem;
-  --size-500: 3rem;
-  --size-600: 6rem;
-
-  --clr-neutral-900: hsl(0, 9%, 11%);
-  --clr-neutral-200: hsl(36, 24%, 96%);
-  --clr-neutral-100: hsl(0, 0%, 100%);
-
-  /* --clr-primary-200: hsl(213, 43%, 79%); */
-  --clr-primary-200: #fff;
-  /* --clr-primary-300: hsl(190, 84%, 50%); */
-  /* --clr-primary-300: #00e1ff; */
-  --clr-primary-300: #775d9c;
-  /* --clr-primary-400: #0062ff; */
-  --clr-primary-400: #ff6c03;
-  --clr-primary-600: #333333;
-  --clr-primary-500: hsl(190, 100%, 28%);
-}
 
 @keyframes animateStars {
 
@@ -945,10 +947,9 @@ html {
   position: sticky;
   top: 0;
   z-index: 100;
-  padding-top: 4rem;
+  padding-top: 3rem;
   padding-bottom: 4rem;
   font-size: 1.5rem;
-  margin-bottom: 5%;
 }
 
 .nav-list {
@@ -1545,43 +1546,60 @@ input[type="range"] {
     font-size: 0.75rem;
   }
 
-  .hamburger {
-    position: relative;
-    display: block;
-    width: 35px;
-    cursor: pointer;
-    appearance: none;
-    background: none;
-    border: none;
-    outline: none;
-    float: right;
-    margin-right: 5%;
-  }
+.hamburger {
+  font-size: 0.5rem;
+  position: relative;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  width: 40px;
+  height: 40px;
+  border: 0;
+  background: transparent;
+  -webkit-tap-highlight-color: transparent;
+}
 
-  .hamburger .bar,
-  .hamburger::after,
-  .hamburger::before {
-    content: "";
-    display: block;
-    width: 100%;
-    height: 5px;
-    background-color: #ff6c03;
-    margin: 6px 0px;
-    transition: 0.5s;
-  }
+.hamburger .bar,
+.hamburger::before,
+.hamburger::after {
+  content: "";
+  position: absolute;
+  width: 24px;
+  height: 4px;
+  background: #ff6c03;
+  border-radius: 2px;
+  left: 50%;
+  transform: translateX(-50%);
+  transition: transform .35s ease, opacity .25s ease;
+  transform-origin: 50% 50%;
+}
+.hamburger::before {
+  top: 10px;
+}
 
-  .hamburger.is-active::before {
-    transform: rotate(-45deg) translate(-9px, 6px);
-    
-  }
+.hamburger .bar {
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
 
-  .hamburger.is-active::after {
-    transform: rotate(45deg) translate(-9px, -6px);
-  }
+.hamburger::after {
+  bottom: 10px;
+}
 
-  .hamburger.is-active .bar {
-    opacity: 0;
-  }
+.hamburger.is-active .bar {
+  opacity: 0;
+}
+
+.hamburger.is-active::before {
+  top: 50%;
+  transform: translate(-50%, -50%) rotate(45deg);
+}
+
+.hamburger.is-active::after {
+  bottom: auto;
+  top: 50%;
+  transform: translate(-50%, -50%) rotate(-45deg);
+}
 
   .mobile-nav {
     position: fixed;
@@ -1631,7 +1649,11 @@ input[type="range"] {
   }
 
   .primary-navigation {
-    font-size: 0.5rem;
+    display: flex;
+      align-items: center;
+        justify-content: flex-end;
+        padding-right: 1rem;
+
   }
 
   .nav-list {
